--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-table-tutorial",
   "version": "0.1.0",
-  "homepage": "https://psoares033.github.io",
+  "homepage": "https://psoares033.github.io/trabalho-sonar/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
